tzsetup: add support for countries in two continents

This supports countries located across multiple continents, as per the
zone1970.tab file. This only affects Cyprus and Türkiye at the moment.

PR:		236874
Sponsored by:	The FreeBSD Foundation
Differential Revision: https://reviews.freebsd.org/D41306